Use Path.of() instead of Paths.get()
Path.of() makes Paths.get() obsolete in Java 11

Change-Id: Ie3cda479e3af5f1bb7a36a25c5095783ec750ca5
Signed-off-by: Edwin Kempin <ekempin@google.com>